Kubernetes/customer-svc-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-svc-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customerservice
  template:
    metadata:
      labels:
        app: customerservice
    spec:
      containers:
        - name: customerservice
          image: adeakinwe/customerservice:net8.0

---
apiVersion: v1
kind: Service
metadata:
  name: customer-svc-clusterip-svc
spec:
  type: ClusterIP
  selector:
    app: customerservice
  ports:
    - name: customerservice
      protocol: TCP
      port: 80
      targetPort: 80
