Kubernetes/customer-svc-np-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-svc-np-svc
spec:
  type: NodePort
  selector:
    app: customerservice
  ports:
    - name: customerservice
      protocol: TCP
      port: 80
      targetPort: 80
