Kubernetes/event-svc-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-svc-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventservice
  template:
    metadata:
      labels:
        app: eventservice
    spec:
      containers:
        - name: eventservice
          image: adeakinwe/eventservice:latest

---
apiVersion: v1
kind: Service
metadata:
  name: event-svc-clusterip-svc
spec:
  type: ClusterIP
  selector:
    app: eventservice
  ports:
    - name: eventservice
      protocol: TCP
      port: 80
      targetPort: 80
