Kubernetes/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: microservices.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customer-svc-clusterip-svc
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: event-svc-clusterip-svc
                port:
                  number: 80
